--- a/styles.css
+++ b/styles.css
@@ -1,23 +1,16 @@
 body {
   margin: 30px 0;
-  background:#fcebeb;
-  font-family: 'Brygada 1918', serif;
-  line-height:2em;
+  background: #fcebeb;
+  font-family: "Brygada 1918", serif;
+  line-height: 2em;
   font-size: 1.5vw;
-
-}
-@media (max-width:820px){
-  #bio{
-    width: 90%;
-    background: crimson;
-  }
 }
 
 #image {
-  max-width: 70%;
+  max-width: 100%;
 }
 
-figcaption{
+figcaption {
   font-size: 1.4vw;
   margin-top: 0;
 }
@@ -25,21 +18,28 @@ figcaption{
 #img-div,
 h1,
 p,
-figcaption{
+figcaption {
   text-align: center;
-  font-weight:bolder;
 }
 
 #bio {
   padding: 1%;
   margin: auto;
   width: 70%;
-  background:#c7d8f7
+  background: #c7d8f7;
 }
 
-li{
+li {
   margin: 1em;
 }
-strong{
+strong {
   text-decoration: underline;
+}
+@media (max-width:800px){
+  #bio{
+    width: 100%;
+  }
+  body{
+    font-size: 2.5vw;
+  }
 }
