--- a/styles.css
+++ b/styles.css
@@ -2,17 +2,19 @@ body {
   margin: 30px 0;
   background: #fcebeb;
   font-family: "Brygada 1918", serif;
-  line-height: 2em;
-  font-size: 1.5vw;
+  /* line-height: 2em; */
+  font-size: 1.5vmax;
 }
-
+figure{
+  margin: 0;
+}
 #image {
-  max-width: 100%;
+  width: 85%;
 }
 
 figcaption {
-  font-size: 1.4vw;
-  margin-top: 0;
+  font-size: 2vmax;
+  margin-bottom: 1em;
 }
 
 #img-div,
@@ -22,8 +24,8 @@ figcaption {
   text-align: center;
 }
 
-#bio {
-  padding: 1%;
+article {
+  padding: 3%;
   margin: auto;
   width: 70%;
   background: #c7d8f7;
@@ -36,10 +38,10 @@ strong {
   text-decoration: underline;
 }
 @media (max-width:800px){
-  #bio{
+  article{
     width: 100%;
   }
   body{
-    font-size: 2.5vw;
+    font-size: 2vmax;
   }
 }
